--- a/assign 7.ipynb
+++ b/assign 7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -25,15 +25,15 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\suraj\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\kambl\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Unzipping tokenizers\\punkt.zip.\n",
       "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     C:\\Users\\suraj\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\kambl\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger.zip.\n",
       "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\suraj\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\kambl\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\suraj\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\kambl\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
      ]
     },
@@ -43,7 +43,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
