--- a/assign 10/assign 10.ipynb
+++ b/assign 10/assign 10.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Visualization III\n",
+    "Download the Iris flower dataset or any other dataset into a DataFrame. (e.g.,\n",
+    "https://archive.ics.uci.edu/ml/datasets/Iris ). Scan the dataset and give the inference as: 1.\n",
+    "List down the features and their types (e.g., numeric, nominal) available in the dataset. 2.\n",
+    "Create a histogram for each feature in the dataset to illustrate the feature distributions. 3.\n",
+    "Create a boxplot for each feature in the dataset. 4. Compare distributions and identify\n",
+    "outliers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
