--- a/assign 2.ipynb
+++ b/assign 2.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Wrangling II\n",
+    "Create an “Academic performance” dataset of students and perform the following\n",
+    "operations using Python. 1. Scan all variables for missing values and inconsistencies. If\n",
+    "there are missing values and/or inconsistencies, use any of the suitable techniques to deal\n",
+    "with them. 2. Scan all numeric variables for outliers. If there are outliers, use any of the\n",
+    "suitable techniques to deal with them. 3. Apply data transformations on at least one of the\n",
+    "variables. The purpose of this transformation should be one of the following reasons: to\n",
+    "change the scale for better understanding of the variable, to convert a non-linear relation\n",
+    "into a linear one, or to decrease the skewness and convert the distribution into a normal\n",
+    "distribution. Reason and document your approach properly."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -101,10 +117,30 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     3.806662\n",
+      "1     3.871201\n",
+      "2     4.174387\n",
+      "3     4.219508\n",
+      "4     4.219508\n",
+      "        ...   \n",
+      "95    4.077537\n",
+      "96    3.178054\n",
+      "97    4.382027\n",
+      "98    2.639057\n",
+      "99    4.454347\n",
+      "Name: Math_Score_Log, Length: 100, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Apply logarithmic transformation to Math_Score variable\n",
-    "academic_df['Math_Score_Log'] = np.log1p(academic_df['Math_Score'])\n"
+    "academic_df['Math_Score_Log'] = np.log1p(academic_df['Math_Score'])\n",
+    "print(academic_df['Math_Score_Log'])"
    ]
   }
  ],
