--- a/assign 3/assign 3.ipynb
+++ b/assign 3/assign 3.ipynb
@@ -1,8 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Descriptive Statistics - Measures of Central Tendency and variability\n",
+    "Perform the following operations on any open source dataset (e.g., data.csv) 1. Provide\n",
+    "summary statistics (mean, median, minimum, maximum, standard deviation) for a\n",
+    "Curriculum for Third Year of Artificial Intelligence and Data Science (2019 Course),\n",
+    "Savitribai Phule Pune University\n",
+    "http://collegecirculars.unipune.ac.in/sites/documents/Syllabus2022/Forms/AllItems.aspx\n",
+    "#84/105 dataset (age, income etc.) with numeric variables grouped by one of the\n",
+    "qualitative (categorical) variable. For example, if your categorical variable is age groups\n",
+    "and quantitative variable is income, then provide summary statistics of income grouped by\n",
+    "the age groups. Create a list that contains a numeric value for each response to the\n",
+    "categorical variable. 2. Write a Python program to display some basic statistical details like\n",
+    "percentile, mean, standard deviation etc. of the species of ‘Iris-setosa’, ‘Iris-versicolor’ and\n",
+    "‘Iris-versicolor’ of iris.csv dataset. Provide the codes with outputs and explain everything\n",
+    "that you do in this step"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
