--- a/assign 5/assign 5.ipynb
+++ b/assign 5/assign 5.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Analytics II\n",
+    "1.Implement logistic regression using Python/R to perform classification on\n",
+    "Social_Network_Ads.csv dataset. 2. Compute Confusion matrix to find TP, FP, TN, FN,\n",
+    "Accuracy, Error rate, Precision, Recall on the given dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
