--- a/assign 1/assign 1.ipynb
+++ b/assign 1/assign 1.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Wrangling I\n",
+    "Perform the following operations using Python on any open source dataset (e.g.,\n",
+    "data.csv) 1. Import all the required Python Libraries. 2. Locate open source data from\n",
+    "the web (e.g., https://www.kaggle.com). Provide a clear description of the data and its\n",
+    "source (i.e., URL of the web site). 3. Load the Dataset into pandas dataframe. 4. Data\n",
+    "Preprocessing: check for missing values in the data using pandas isnull(), describe()\n",
+    "function to get some initial statistics. Provide variable descriptions. Types of variables\n",
+    "etc. Check the dimensions of the data frame. 5. Data Formatting and Data\n",
+    "Normalization: Summarize the types of variables by checking the data types (i.e.,\n",
+    "character, numeric, integer, factor, and logical) of the variables in the data set. If\n",
+    "variables are not in the correct data type, apply proper type conversions. 6. Turn\n",
+    "categorical variables into quantitative variables in Python. In addition to the codes and\n",
+    "outputs, explain every operation that you do in the above steps and explain everything\n",
+    "that you do to import/read/scrape the data set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
