--- a/assign 4/assign 4.ipynb
+++ b/assign 4/assign 4.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Analytics I\n",
+    "Create a Linear Regression Model using Python/R to predict home prices using Boston\n",
+    "Housing Dataset (https://www.kaggle.com/c/boston-housing). The Boston Housing dataset\n",
+    "contains information about various houses in Boston through different parameters. There\n",
+    "are 506 samples and 14 feature variables in this dataset. The objective is to predict the\n",
+    "value of prices of the house using the given features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
