--- a/assign 7.ipynb
+++ b/assign 7.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Text Analytics\n",
+    "1.Extract Sample document and apply following document preprocessing methods:\n",
+    "Tokenization, POS Tagging, stop words removal, Stemming and Lemmatization. 2. Create\n",
+    "representation of documents by calculating Term Frequency and Inverse\n",
+    "DocumentFrequency"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
