--- a/assign 8/assign 8.ipynb
+++ b/assign 8/assign 8.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Visualization I\n",
+    "1.Use the inbuilt dataset &#39;titanic&#39;. The dataset contains 891 rows and contains information\n",
+    "about the passengers who boarded the unfortunate Titanic ship. Use the Seaborn library\n",
+    "to see if we can find any patterns in the data. 2. Write a code to check how the price of the\n",
+    "ticket (column name: &#39;fare&#39;) for each passenger is distributed by plotting a histogram."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
