--- a/assign 9/assign 9.ipynb
+++ b/assign 9/assign 9.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Visualization II\n",
+    "1.Use the inbuilt dataset &#39;titanic&#39; as used in the above problem. Plot a box plot for\n",
+    "distribution of age with respect to each gender along with the information about whether\n",
+    "they survived or not. (Column names : &#39;sex&#39; and &#39;age&#39;) 2. Write observations on the\n",
+    "inference from the above statistics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
